--- a/.github/workflows/build-and-deploy-dev.yml
+++ b/.github/workflows/build-and-deploy-dev.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - '**'        # matches every branch
-      - '!master'   # excludes master
+      - '!main'   # excludes main
 
 jobs:
   build:
