--- a/.github/workflows/build-and-deploy-dev.yml
+++ b/.github/workflows/build-and-deploy-dev.yml
@@ -26,6 +26,7 @@ jobs:
 
       - uses: dorny/paths-filter@v2
         id: changes
+        base: 'dev'
         with:
           filters: |
             clean_data:
