--- a/.github/workflows/build-and-deploy-dev.yml
+++ b/.github/workflows/build-and-deploy-dev.yml
@@ -72,4 +72,4 @@ jobs:
       - run: |
           git checkout ${{ steps.extract_branch.outputs.branch }}
           git add -A
-          git commit -m "[BOT] Add ID in configuration files" --dry-run && git push || echo "Nothing to commit"
+          git commit -m "[BOT] Add ID in configuration files" && git push || echo "Nothing to commit"
