--- a/.github/workflows/build-and-deploy-dev.yml
+++ b/.github/workflows/build-and-deploy-dev.yml
@@ -77,5 +77,6 @@ jobs:
         with:
           token: '${{ secrets.GITHUB_TOKEN }}'
       - run: |
-          git checkout ${{ steps.extract_branch.outputs.branch }}
+          git status
+          git add .
           git commit -m "[BOT] Add ID in configuration files" && git push || echo "Nothing to commit"
