Enable yaml config file for pipeline
Enable yaml config file for pipeline

--- a/.github/workflows/build-and-deploy-prod.yml
+++ b/.github/workflows/build-and-deploy-prod.yml
@@ -34,6 +34,7 @@ jobs:
               - saagie/jobs/*.json
             pipelines:
               - saagie/pipelines/*.json
+              - saagie/pipelines/*.yaml
 
       - name: Run step if any of the jobs files above change
         if: steps.changed-files-specific.outputs.jobs_any_changed == 'true'
