--- a/.github/workflows/build-and-deploy-dev.yml
+++ b/.github/workflows/build-and-deploy-dev.yml
@@ -36,6 +36,7 @@ jobs:
               - saagie/jobs/*.json
             pipelines:
               - saagie/pipelines/*.json
+              - saagie/pipelines/*.yaml
 
       - name: Run step if any of the jobs files above change
         if: steps.changed-files-specific.outputs.jobs_any_changed == 'true'
