--- a/.github/workflows/build-and-deploy-dev.yml
+++ b/.github/workflows/build-and-deploy-dev.yml
@@ -22,35 +22,36 @@ jobs:
         with:
           python-version: '3.10' # install the python version needed
 
-      - name: install python packages
+      - name: install required python librairies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip 
           pip install -r requirements.txt
 
       - name: Get specific changed files
         id: changed-files-specific
-        uses: tj-actions/changed-files@v37
+        uses: tj-actions/changed-files@v37 # check if we have file changed
         with:
           files_yaml: |
             jobs:
               - saagie/jobs/*.json
             pipelines:
               - saagie/pipelines/*.json
-              - saagie/pipelines/*.yaml
 
       - name: Run step if any of the jobs files above change
-        if: steps.changed-files-specific.outputs.jobs_any_changed == 'true'
+        if: steps.changed-files-specific.outputs.jobs_any_changed == 'true' # check if a job config file have change
+        # then it will package the job and update on Saagie
         run: |
           for file in ${{ steps.changed-files-specific.outputs.jobs_all_changed_files }}; do
             echo "$file was modified"
             file_name=$(basename ${file})
             file_name_without_ext=${file_name%.*}
-            python __main__.py --action package_job --job_name ${file_name_without_ext}
+            python __main__.py --action package_job --job_name ${file_name_without_ext} 
             python __main__.py --action update_job --job_name ${file_name_without_ext} --saagie_url ${{secrets.SAAGIE_URL}} --saagie_user ${{secrets.SAAGIE_USER}} --saagie_pwd ${{secrets.SAAGIE_PWD}} --saagie_realm ${{secrets.SAAGIE_REALM}} --saagie_env dev
           done
 
       - name: Run step if any of the pipelines files above change
-        if: steps.changed-files-specific.outputs.pipelines_any_changed == 'true'
+        if: steps.changed-files-specific.outputs.pipelines_any_changed == 'true' # check if a pipeline config file have change
+        # then it will update on Saagie
         run: |
           for file in ${{ steps.changed-files-specific.outputs.pipelines_all_changed_files }}; do
             echo "$file was modified"
@@ -58,12 +59,3 @@ jobs:
             file_name_without_ext=${file_name%.*}
             python __main__.py --action update_pipeline --pipeline_name ${file_name_without_ext} --saagie_url ${{secrets.SAAGIE_URL}} --saagie_user ${{secrets.SAAGIE_USER}} --saagie_pwd ${{secrets.SAAGIE_PWD}} --saagie_realm ${{secrets.SAAGIE_REALM}} --saagie_env dev
           done
-
-      - name: commit and push
-        uses: oleksiyrudenko/gha-git-credentials@v2-latest
-        with:
-          token: '${{ secrets.GITHUB_TOKEN }}'
-      - run: |
-          git status
-          git add .
-          git commit -m "[BOT] Add ID in configuration files" && git push || echo "Nothing to commit"
