--- a/.github/workflows/build-and-deploy-prod.yml
+++ b/.github/workflows/build-and-deploy-prod.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content
+        uses: actions/checkout@v4 # checkout the repository content
 
       - name: setup python
         uses: actions/setup-python@v4
@@ -22,8 +22,8 @@ jobs:
 
       - name: install required python librairies
         run: |
-          python -m pip install --upgrade pip 
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          pip install -r cicd_saagie_tool/requirements.txt
 
       - name: Get specific changed files
         id: changed-files-specific
